--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,26 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home Template</title>
-</head>
-<body>
 {% extends 'main.html' %}
 
 {% block content %}
     <h1>Home Template</h1>
 
     <div>
+        <a href="{% url 'create-room' %}">Create Room</a>
+
         <div>
             {% for room in rooms %}
                 <div>
-                   <h5>{{ room.id }}--<a href="{% url 'room' room.id %}">{{ room.name }} <a></h5>
+                    <a href="{% url 'update-room' room.id %}">Edit</a>
+                    <a href="{% url 'delete-room' room.id %}">Delete</a>
+                    <span>@{{ room.host.username }}</span>
+                    <h5>{{ room.id }}--<a href="{% url 'room' room.id %}">{{ room.name }} </a></h5>
+                    <small>{{ room.topic.name }}</small>
+                    <hr>
                 </div>
             {%  endfor %}
         </div>
 
     </div>
 {% endblock %}
-
-</body>
-</html>
